CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(UDS)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -Werror")

#UDS
SET(UDS_SOURCE_FILES ${UDS_SOURCE_FILES} iso14229.h)
SET(UDS_SOURCE_FILES ${UDS_SOURCE_FILES} uds.h uds.cpp)
SET(UDS_SOURCE_FILES ${UDS_SOURCE_FILES} uds_j2534.h uds_j2534.cpp)

SET(LIB_TYPE SHARED)
ADD_LIBRARY(uds ${LIB_TYPE} ${UDS_SOURCE_FILES})
TARGET_LINK_LIBRARIES(uds j2534)
SET_TARGET_PROPERTIES(uds PROPERTIES COMPILE_FLAGS "-DUDS_EXPORTS -DUDS_J2534_EXPORTS")

# SWIG
FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_SWIG_FLAGS "")

# SWIG UDS
SET_SOURCE_FILES_PROPERTIES(uds.i PROPERTIES CPLUSPLUS ON)
SWIG_ADD_MODULE(uds_python python uds.i)
SWIG_LINK_LIBRARIES(uds_python uds)
SWIG_LINK_LIBRARIES(uds_python ${PYTHON_LIBRARIES})
SET_TARGET_PROPERTIES(${SWIG_MODULE_uds_python_REAL_NAME} PROPERTIES OUTPUT_NAME "uds")
SET_TARGET_PROPERTIES(${SWIG_MODULE_uds_python_REAL_NAME} PROPERTIES PREFIX "_")
SET_TARGET_PROPERTIES(${SWIG_MODULE_uds_python_REAL_NAME} PROPERTIES COMPILE_FLAGS "-Wno-error=missing-field-initializers")
ADD_CUSTOM_COMMAND(TARGET ${SWIG_MODULE_uds_python_REAL_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} ARGS -E copy_if_different ${CMAKE_CURRENT_BINARY_DIR}/uds.py ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} )
